# OOP

./: Lab3_rand(description).cpp  Lab4_vector(description).cpp  Lab4_vector.cpp  Laboratornay2.cpp  README.md
CMakeProject_lab_5/: CMakeLists.txt  CMakeProject_lab_5.cpp  CMakeProject_lab_5.h  Candle.h  ElectricIron.cpp  ElectroFlashlight.cpp  Flashlight.cpp  Flashlight.h  Garland.h  KeroseneLamp.h  LightBulb.cpp  PowerStrip.h
Lab1_Var_4 (Lesha Pritkov) (complete)/: Lab1_Var4.cpp  Lab1_Var4.sln  Lab1_Var4.vcxproj  Lab1_Var4.vcxproj.filters
Lab1_Var_4 (Lesha Pritkov) (complete)/Lab1_Var4/x64/Debug/: Lab1_Var4.exe.recipe  Lab1_Var4.ilk  (+1 more)
Lab1_Var_7 (Tanya и Egor) (complete)/: Lab1_Var_7.cpp  Lab1_Var_7.sln  Lab1_Var_7.vcxproj  Lab1_Var_7.vcxproj.filters
Lab2_struct/: Lab2_struct.cpp  Lab2_struct.sln  Lab2_struct.vcxproj  Lab2_struct.vcxproj.filters  ListNode.cpp  ListNode.h  PointersArray.cpp  PointersArray.h  SimpleDynamicArray.cpp  SimpleDynamicArray.h
Lab3(rand)/Lab3_rand/: Laboratornay2.cpp  Laboratornay2.vcxproj  Laboratornay2.vcxproj.filters
Lab3_rand/: Lab3_rand.cpp  Lab3_rand.sln  Lab3_rand.vcxproj  Lab3_rand.vcxproj.filters
Lab4_vector/: Lab4_vector.cpp  Lab4_vector.sln  Lab4_vector.vcxproj  Lab4_vector.vcxproj.filters  READ(обязательно).md
Lab5(interface)/: Candle.cpp  ElectricIron.h  ElectroFlashlight.h  Garland.cpp  IElectroDevice.h  ILightSource.h  KeroseneLamp.cpp  Lab5(interface).cpp  Lab5(interface).sln  Lab5(interface).vcxproj  Lab5(interface).vcxproj.filters  LightBulb.h  PowerStrip.cpp
Laboratornay2/: Laboratornay2.cpp  Laboratornay2.sln
(+91 files in other folders)
